overlays/minikube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfs-ingress
spec:
  rules:
  - host: nfs-management.info
    http:
      paths:
      - backend:
          service:
            name: management-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: nfs-nodes.info
    http:
      paths:
      - backend:
          service:
            name: node-service
            port:
              number: 80
        path: /
        pathType: Prefix
